# neutron-dynamic-routing

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  TESTING.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/lib/: dr
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/admin/: agent-scheduler.rst  bgp-speaker.rst  index.rst  route-advertisement.rst  system-design.rst
doc/source/cli/: bgp-peer.rst  bgp-speaker.rst  dynamic-routing-agent.rst  index.rst
doc/source/configuration/: bgp_dragent.rst  index.rst  policy-sample.rst  policy.rst
doc/source/configuration/samples/: bgp_dragent.rst
doc/source/contributor/: contributing.rst  dragent-drivers.rst  index.rst  testing.rst
doc/source/design/: agent-scheduler.rst  api.rst  command-lines.rst  drivers.rst  system-design.rst
doc/source/functionality/: bgp-speaker.rst  route-advertisement.rst
doc/source/install/: index.rst  usecase-ipv6.rst
doc/source/others/: alembic_migration.rst  testing.rst
doc/source/reference/: index.rst
etc/: README.txt
etc/neutron/policy.d/: dynamic_routing.conf
etc/oslo-config-generator/: bgp_dragent.ini
etc/oslo-policy-generator/: policy.conf
neutron_dynamic_routing/: _i18n.py  version.py
neutron_dynamic_routing/api/rpc/agentnotifiers/: bgp_dr_rpc_agent_api.py
neutron_dynamic_routing/api/rpc/callbacks/: resources.py
neutron_dynamic_routing/api/rpc/handlers/: bgp_speaker_rpc.py
neutron_dynamic_routing/cmd/agents/: bgp_dragent.py
neutron_dynamic_routing/cmd/eventlet/: __init__.py
neutron_dynamic_routing/cmd/eventlet/agents/: bgp_dragent.py
neutron_dynamic_routing/db/: bgp_db.py  bgp_dragentscheduler_db.py
neutron_dynamic_routing/db/migration/: README
neutron_dynamic_routing/db/migration/alembic_migrations/: env.py  script.py.mako
neutron_dynamic_routing/db/migration/alembic_migrations/versions/: CONTRACT_HEAD  EXPAND_HEAD  start_neutron_dynamic_routing.py
neutron_dynamic_routing/db/migration/alembic_migrations/versions/newton/contract/: 4cf8bc3edb66_rename_tenant_to_project.py  61cc795e43e8_initial.py
neutron_dynamic_routing/db/migration/alembic_migrations/versions/newton/expand/: f399fa0f5f25_initial.py
neutron_dynamic_routing/db/migration/models/: head.py
neutron_dynamic_routing/extensions/: bgp.py  bgp_4byte_asn.py  bgp_dragentscheduler.py
neutron_dynamic_routing/policies/: __init__.py  bgp_dragent.py  bgp_peer.py  bgp_speaker.py
neutron_dynamic_routing/services/bgp/: bgp_plugin.py
neutron_dynamic_routing/services/bgp/agent/: bgp_dragent.py  config.py  entry.py
neutron_dynamic_routing/services/bgp/agent/driver/: base.py  exceptions.py  utils.py
neutron_dynamic_routing/services/bgp/agent/driver/os_ken/: driver.py
neutron_dynamic_routing/services/bgp/agent/driver/ryu/: driver.py
neutron_dynamic_routing/services/bgp/common/: constants.py  opts.py
neutron_dynamic_routing/services/bgp/scheduler/: bgp_dragent_scheduler.py
neutron_dynamic_routing/tests/api/: test_bgp_speaker_extensions.py  test_bgp_speaker_extensions_negative.py
neutron_dynamic_routing/tests/common/: helpers.py
neutron_dynamic_routing/tests/contrib/: README  gate_hook.sh  post_test_hook.sh
neutron_dynamic_routing/tests/functional/services/bgp/scheduler/: test_bgp_dragent_scheduler.py
neutron_dynamic_routing/tests/tempest/: bgp_client.py  plugin.py
neutron_dynamic_routing/tests/tempest/api/: test_bgp_speaker_extensions.py  test_bgp_speaker_extensions_negative.py
neutron_dynamic_routing/tests/tempest/scenario/: README  base.py  base_test_proto.py
neutron_dynamic_routing/tests/tempest/scenario/basic/: base.py  test_4byte_asn.py  test_basic.py
neutron_dynamic_routing/tests/tempest/scenario/ipv4/: test_ipv4.py
neutron_dynamic_routing/tests/tempest/scenario/ipv6/: test_ipv6.py
neutron_dynamic_routing/tests/unit/: test_neutron_dynamic_routing.py
neutron_dynamic_routing/tests/unit/api/rpc/agentnotifiers/: test_bgp_dr_rpc_agent_api.py
neutron_dynamic_routing/tests/unit/api/rpc/handlers/: test_bgp_speaker_rpc.py
neutron_dynamic_routing/tests/unit/db/: test_bgp_db.py  test_bgp_dragentscheduler_db.py
neutron_dynamic_routing/tests/unit/policies/: test_bgp_dragent.py  test_bgp_peer.py  test_bgp_speaker.py
neutron_dynamic_routing/tests/unit/services/bgp/: test_bgp_plugin.py
neutron_dynamic_routing/tests/unit/services/bgp/agent/: test_bgp_dragent.py
neutron_dynamic_routing/tests/unit/services/bgp/driver/: test_utils.py
neutron_dynamic_routing/tests/unit/services/bgp/scheduler/: test_bgp_dragent_scheduler.py
playbooks/neutron-dynamic-routing-dsvm-functional/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-api/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-scenario-basic/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-scenario-ipv4/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-scenario-ipv6/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-with-os-ken-master-scenario-ipv4/: run.yaml
playbooks/neutron-dynamic-routing-dsvm-tempest-with-ryu-master-scenario-ipv4/: run.yaml
playbooks/periodic-neutron-dynamic-routing-dsvm-tempest-with-ryu-master-scenario-ipv4/: run.yaml
releasenotes/notes/: Stop-using-eventlet-24610bb3393541e1.yaml  add-static-scheduler-a3b0f54b964ae306.yaml  drop-py27-support-795303ca12cccd34.yaml  drop-py39-a9a5f0b7addc2f12.yaml  dvr-aware-announcements-24bfcb8fee87161d.yaml  fix-address-scope-calculation-c8ac84662a6547bd.yaml  mp-bgp-support-d408e8569e94d07f.yaml  rpc-workers-4941f3b9136418df.yaml  sqlalchemy-20-abaa3d2895131ab4.yaml  srbac-for-neutron-dynamic-routing-a0c7084e7b43cc6e.yaml  static-scheduler-2288b8173f9357a6.yaml  support-4byte-asn-d89d7100c0890ebf.yaml
releasenotes/source/: README.rst  conf.py  index.rst
tools/: check_unit_test_structure.sh  tox_install.sh
(+3 files in other folders)
