[metadata]
name = neutron-dynamic-routing
summary = Neutron Dynamic Routing
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/neutron-dynamic-routing/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_dynamic_routing
data_files =
    etc/neutron/policy.d =
        etc/neutron/policy.d/dynamic_routing.conf

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-bgp-dragent = neutron_dynamic_routing.cmd.eventlet.agents.bgp_dragent:main
neutron.db.alembic_migrations =
    neutron-dynamic-routing = neutron_dynamic_routing.db.migration:alembic_migrations
oslo.config.opts =
    bgp.agent = neutron_dynamic_routing.services.bgp.common.opts:list_bgp_agent_opts
tempest.test_plugins =
    neutron_dynamic_routing = neutron_dynamic_routing.tests.tempest.plugin:NeutronDynamicRoutingTempestPlugin
neutron.service_plugins =
    bgp = neutron_dynamic_routing.services.bgp.bgp_plugin:BgpPlugin

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_dynamic_routing/locale/neutron_dynamic_routing.pot

[compile_catalog]
directory = neutron_dynamic_routing/locale
domain = neutron_dynamic_routing

[update_catalog]
domain = neutron_dynamic_routing
output_dir = neutron_dynamic_routing/locale
input_file = neutron_dynamic_routing/locale/neutron_dynamic_routing.pot

[wheel]
universal = 1
