[metadata]
name = neutron-dynamic-routing
summary = Neutron Dynamic Routing
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/neutron-dynamic-routing/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    neutron_dynamic_routing

[entry_points]
console_scripts =
    neutron-bgp-dragent = neutron_dynamic_routing.cmd.eventlet.agents.bgp_dragent:main
neutron.db.alembic_migrations =
    neutron-dynamic-routing = neutron_dynamic_routing.db.migration:alembic_migrations
oslo.config.opts =
    bgp.agent = neutron_dynamic_routing.services.bgp.common.opts:list_bgp_agent_opts
oslo.policy.policies =
    neutron-dynamic-routing = neutron_dynamic_routing.policies:list_rules
neutron.policies =
    neutron-dynamic-routing = neutron_dynamic_routing.policies:list_rules
neutron.service_plugins =
    bgp = neutron_dynamic_routing.services.bgp.bgp_plugin:BgpPlugin
